examples/failing/TypeError.purs
module Main where

import Prelude

test = 1 ++ "A"
